# numerical_physics

./: .gitignore  README.md
graphing/rust/graphing/: Cargo.toml
graphing/rust/graphing/src/: main.rs
integration/simple/: README.md
python/: pyproject.toml
python/roots/: bisection.py
pythonsrc/: pyproject.toml
pythonsrc/integrations/: integrate.py
pythonsrc/notebooks/: schrodinger-2.ipynb  schrodinger.ipynb  schrodinger.py
pythonsrc/quantum/: schrodinger.py
root-finding/bisection/: README.md
root-finding/bisection/python/: bisection.py
root-finding/bisection/rust/src/: main.rs
root-finding/newton/: README.md
root-finding/newton/python/: newton.py
root-finding/newton/rust/src/: main.rs
root-finding/secant/: README.md
root-finding/secant/python/: secant.py
root-finding/secant/rust/src/: main.rs
rustsrc/src/: main.rs  preamble.rs  roots.rs
