[tool.poetry]
name = "numerical_physics"
version = "0.1.0"
description = ""
authors = ["Thaza_Kun <61819672+Thaza-Kun@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "~3.8"
scipy = "^1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
