[tool.poetry]
name = "numerical_physics"
version = "0.1.0"
description = ""
authors = ["Thaza_Kun <61819672+Thaza-Kun@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scipy = "^1.8"
jupyter = "^1.0.0"
numpy = "^1.23.4"
matplotlib = "^3.6.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
